# Warehouse-management-system

./: CMakeLists.txt
functionlib/: CMakeLists.txt  Object_code_check.c  update.c
include/: Object_code_check.h  object.h  print.h  print_pdf.h  status.h  update.h  warehouse.h
instructions/: df.txt  df1.txt  df2.txt  i.txt  i2.txt  inst.txt  u.txt  ug.txt  yg.txt
source/: init.c  init.h  source.c  test.sh
src/: makepdf.sh  print.c  print_pdf.c  source.c  status.c
tests/: CMakeLists.txt  test_Object_code_check.cpp  test_update.cpp
